external-crates/move/crates/move-compiler/tests/move_check/parser/hexstring_token_eof2.move
module 0x42::M {
    public fun foo(): vector<u8> {
        x"abcd
